feat(Ghat): Add update ghat
